--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,8 @@ psycopg2-binary = "*"
 djangorestframework-simplejwt = "*"
 django-filter = "*"
 python-dotenv = "*"
+django-silk = "*"
+django-cors-headers = "*"
 
 [dev-packages]
 
